--- a/vm2/package.json
+++ b/vm2/package.json
@@ -12,6 +12,7 @@
     "db:seed": "firebase database:set /vue-forum src/data.json -y"
   },
   "dependencies": {
+    "dotenv": "^5.0.1",
     "firebase": "^4.12.1",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
